# godot-poc

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml  codeql.yml
godot/: project.godot
godot/extensions/: game_client.gdextension  game_client.gdextension.uid
godot/scenes/: celestial_body_view.tscn  cosmos_camera_rig.tscn  main.tscn
godot/scripts/: body_highlight_label.gd  body_highlight_label.gd.uid  body_label_appearance.gd  body_label_appearance.gd.uid  body_label_overlay.gd  body_label_overlay.gd.uid  celestial_body_view.gd  celestial_body_view.gd.uid  cosmos_camera_rig.gd  cosmos_camera_rig.gd.uid  focus_controller.gd  focus_controller.gd.uid  main.gd  main.gd.uid  orbit_lane_view.gd  orbit_lane_view.gd.uid  orbit_marker_control.gd  orbit_marker_control.gd.uid  orbit_marker_overlay.gd  orbit_marker_overlay.gd.uid  orbit_math.gd  orbit_math.gd.uid  render_domain.gd
godot/shaders/: body_outline.gdshader  body_outline.gdshader.uid  body_surface.gdshader  body_surface.gdshader.uid
godot/tests/: bridge_test_runner.gd  bridge_test_runner.gd.uid  test_body_hover.gd  test_body_hover.gd.uid  test_body_labels.gd  test_body_labels.gd.uid  test_body_rotation.gd  test_body_rotation.gd.uid  test_bridge_loads.gd  test_bridge_loads.gd.uid  test_camera_lock.gd  test_camera_lock.gd.uid  test_camera_rig.gd  test_camera_rig.gd.uid  test_orbit_lanes.gd  test_orbit_lanes.gd.uid  test_orbit_markers.gd  test_orbit_markers.gd.uid
native/backend_core/: CMakeLists.txt
native/backend_core/include/backend_core/: simulation.h
native/backend_core/src/: simulation.cpp
native/backend_core/src/massive_body/: default_bodies.cpp  default_bodies.h  massive_body.h
native/backend_core/src/massive_body/tests/: massive_body_tests.cpp
native/backend_core/src/simulation/: simulation.cpp  simulation.h
native/backend_core/src/simulation/tests/: simulation_tests.cpp
native/backend_core/src/time/: duration_format.cpp  duration_format.h
native/backend_core/src/time/tests/: duration_format_tests.cpp
native/godot_bridge/: CMakeLists.txt
native/godot_bridge/include/godot_bridge/: register_types.h  solar_system_bridge.h
native/godot_bridge/src/: register_types.cpp  solar_system_bridge.cpp
native/godot_bridge/src/bridge/: bridge_state_builder.cpp  bridge_state_builder.h  bridge_state_resolver.cpp  bridge_state_resolver.h  register_types.cpp  register_types.h  solar_system_bridge.cpp  solar_system_bridge.h
native/godot_bridge/src/bridge/tests/: bridge_state_builder_tests.cpp  bridge_state_resolver_tests.cpp
native/protocol/: CMakeLists.txt
native/protocol/include/protocol/: messages.h
native/protocol/src/: messages.cpp
native/protocol/src/messages/: messages.cpp  messages.h
scripts/: export-sonar-findings.ps1
tests/: CMakeLists.txt  test_simulation.cpp
